tests/build/fail/widget/property_already_captured2.stderr
error: property `id` already captured
 --> $DIR/property_already_captured2.rs:7:46
  |
7 |     fn new(child: impl UiNode, id: WidgetId, id: WidgetId) {
  |                                              ^^

error[E0415]: identifier `id` is bound more than once in this parameter list
 --> $DIR/property_already_captured2.rs:7:46
  |
7 |     fn new(child: impl UiNode, id: WidgetId, id: WidgetId) {
  |                                              ^^ used as parameter more than once
